--- a/HtmlPage1.html
+++ b/HtmlPage1.html
@@ -5,8 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1>Afreed</h1>
-    
-    
+    <h1 style="background-color:navy;color:white;text-align:center">Afreed branch</h1>
+
 </body>
 </html>
