--- a/WebApplication20/HtmlPage1.html
+++ b/WebApplication20/HtmlPage1.html
@@ -5,8 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1 class="bg-danger ">Sreekanth
+    <h1 style="background-color:lightblue;color:blue;text-align:center">Sreekanth
     </h1>
-
 </body>
 </html>
